# ClinicalFlowApp

./: .gitignore  CLAUDE.md  app.js  corrections.json  index.html  package-lock.json  package.json  styles.css
.claude/: settings.local.json
ClinicalFlowWebsite/: CNAME  about.html  account.html  auth-nav.js  docs.css  docs.html  feedback.html  get-started.html  index.html  login.html  main.js  pricing.html  privacy-policy.html  reset-password.html  robots.txt  security.html  signup.html  sitemap.xml  styles.css  terms-of-service.html  welcome.html
chrome-extension/: content.js  manifest.json  popup.css  popup.html  popup.js
docs/: ClinicalFlow_CloudAI_Integration.md  ClinicalFlow_Full_Audit.md  ClinicalFlow_Phase11_AppOnly.md  ClinicalFlow_Phase3_Detailed.md  ClinicalFlow_Phase4_Detailed.md  ClinicalFlow_Phase5_Detailed.md  ClinicalFlow_Phase6_Detailed.md  ClinicalFlow_Phase7_Detailed.md  ClinicalFlow_Phase8_Detailed.md  ClinicalFlow_Phase9_Detailed.md  INFRASTRUCTURE.md  RADIOLOGY_MODULE_IMPLEMENTATION.md  WEBSITE_COMPLETION_SPEC.md  WINDOWS_BUILD_PLAN.md  WINDOWS_READINESS_AUDIT.md  clinicalflow-dental-dictionary.md  (+4 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helpers/: html2pdf.swift
src-tauri/icons/: icon.icns
src-tauri/resources/: corrections-es.json  corrections-fr.json  corrections.json  dental-dictionary.json  medical-dictionary.json  radiology-dictionary.json
src-tauri/src/: audio.rs  auth.rs  crypto.rs  lib.rs  license.rs  logging.rs  main.rs  pdf.rs  pms.rs  storage.rs
(+57 files in other folders)
