[package]
name = "clinicalflow"
version = "1.0.0"
description = "ClinicalFlow — Clinical Documentation Desktop App"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "clinicalflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
cpal = "0.15"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "6"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sysinfo = "0.31"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
reqwest = { version = "0.12", features = ["multipart"] }
mysql_async = "0.34"
hostname = "0.4"
whoami = "1"
hex = "0.4"
